[package]
name = "litehtmlgtk-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59.1"
cc = "1.0"
cbindgen = "0.20.0"

[dependencies]

libc = "0.2"
log = "0.4.11"
bitflags = "1.3.2"
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch="master", package = "pangocairo" }

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"   

[lib]
name = "litehtmlgtk_rs"
path = "src/lib.rs"
